--- a/shifumi.html
+++ b/shifumi.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="titles">
             <h1>Shi Fu Mi</h2>
-            <h2>choose your move !</h3>
+            <h2>choose your move !!</h3>
         </div>
         <div class="buttonContainer">
             <button class="shi" onclick="playGame('shi');">
